<resources>
    <string name="app_name">Byte</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="create_meals">Create Meals</string>
    <string name="find_meals">Find Meals</string>
    <string name="saved_meals">Saved Meals</string>
    <string name="username">Username</string>
    <string name="welcome_to_byte_please_sign_in">Welcome to Byte. Please Sign in!</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="hello">Hello</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="preference_userId_key">preference_userId_key</string>
    <string name="adminbutton">adminButton</string>
    <string name="Orange">Orange</string>
    <string name="White">White</string>
    <string name="Pink">Pink</string>
    <string name="Lime">Lime</string>
    <string name="BabyBlue">Baby Blue</string>
    <string name="Cyan">Cyan</string>
    <string name="Magenta">Magenta</string>
    <string name="Theme_off_switch">Theme off switch</string>
    <string name="Return">Return</string>
    <string name="Small">Small</string>
    <string name="Large">Large</string>
    <string name="Normal">Normal</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_enter_username">Enter Username and Security Key</string>
    <string name="security_key">Security key</string>
    <string name="submit">Submit!</string>
    <string name="sign_up">Sign Up!</string>
    <string name="please_sign_up">Please Sign Up!</string>
    <string name="please_enter_a_recovery_word">Please enter a recovery word:</string>
    <string name="back">back</string>
    <string name="settings">settings</string>
    <string name="themes">themes</string>
    <string name="Themes">Themes</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="Settings">Settings</string>
    <string name="allow_new_user_registration">Allow New User Registration</string>
    <string name="maintenance_mode">Maintenance Mode</string>
    <string name="save_settings">Save Settings</string>
    <string name="bugs">Bugs</string>
    <string name="view_bugs">View Bugs</string>
    <string name="add_bug">Add Bug</string>
    <string name="delete_bug">Delete Bug</string>
    <string name="welcome_admin">Welcome, Admin</string>
    <string name="dashboard">Dashboard</string>
    <string name="users">Users</string>
    <string name="flagged">Flagged</string>
    <string name="analytics">Analytics</string>
    <string name="no_flagged_users">No flagged users</string>
    <string name="is_now_flagged">" is now FLAGGED!!!"</string>
    <string name="no_users_found">No users found</string>
    <string name="Orange">Orange</string>
    <string name="White">White</string>
    <string name="Pink">Pink</string>
    <string name="Lime">Lime</string>
    <string name="BabyBlue">Baby Blue</string>
    <string name="Cyan">Cyan</string>
    <string name="Magenta">Magenta</string>
    <string name="Theme_off_switch">Theme off switch</string>
    <string name="Return">Return</string>
    <string name="Small">Small</string>
    <string name="Large">Large</string>
    <string name="Normal">Normal</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_enter_username">Enter Username and Security Key</string>
    <string name="security_key">Security key</string>
    <string name="submit">Submit!</string>
    <string name="sign_up">Sign Up!</string>
    <string name="please_sign_up">Please Sign Up!</string>
    <string name="please_enter_a_recovery_word">Please enter a recovery word:</string>
    <string name="back">back</string>
    <string name="Themes">Themes</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="Settings">Settings</string>
    <string name="allow_new_user_registration">Allow New User Registration</string>
    <string name="maintenance_mode">Maintenance Mode</string>
    <string name="save_settings">Save Settings</string>
    <string name="bugs">Bugs</string>
    <string name="view_bugs">View Bugs</string>
    <string name="add_bug">Add Bug</string>
    <string name="delete_bug">Delete Bug</string>
    <string name="welcome_admin">Welcome, Admin</string>
    <string name="dashboard">Dashboard</string>
    <string name="users">Users</string>
    <string name="flagged">Flagged</string>
    <string name="analytics">Analytics</string>
    <string name="no_flagged_users">No flagged users</string>
    <string name="is_now_flagged">" is now FLAGGED!!!"</string>
    <string name="no_users_found">No users found</string>
    <string name="total_supabase_meals_0">tmp</string>
    <string name="total_mealdb_meals_0">tmp</string>
    <string name="stats">tmp</string>
    <string name="total_meals_0">tmp</string>
    <string name="total_bugs_0">tmp</string>
    <string name="mealname">MealName</string>
    <string name="mealstatus">Meal Status</string>
    <string name="mealsearchbackbuttontext">Back</string>
</resources>