<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:padding="24dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logDisplayRecyclerView"
        android:layout_width="420dp"
        android:layout_height="230dp"
        android:layout_marginTop="-106dp"
        android:padding="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/byte_recycler_item" />

    <Button
        android:id="@+id/btnReturnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return to Main" />

    <Button
        android:id="@+id/btnOrange"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Orange"
        android:backgroundTint="#FF9800"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnWhite"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/White"
        android:backgroundTint="#FFFFFFFF"
        android:layout_marginTop="16dp"/>


    <Button
        android:id="@+id/btnPink"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Pink"
        android:backgroundTint="#FFC0CB"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnBabyBlue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/BabyBlue"
        android:backgroundTint="#89CFF0"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnLime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Lime"
        android:backgroundTint="#CDDC39"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btnCyan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Cyan"
        android:backgroundTint="#00BCD4"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btnMagenta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Magenta"
        android:backgroundTint="#E040FB"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="8dp"/>



</LinearLayout>
