<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adminStatsSection"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:background="?android:attr/colorBackground" >

    <TextView
        android:id="@+id/titleAdminStatsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/adminStatsTotalMealDBMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_meals_mealdb_0"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/adminStatsTotalSupabaseMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_supabase_meals_0"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/adminStatsTotalMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_meals_0"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/adminStatsTotalBugs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_bugs_0"
        android:textSize="18sp" />
</LinearLayout>