<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewUserFragment">

    <TextView
        android:id="@+id/titleSignUpTextView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/please_sign_up"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/newUserNameEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="Please enter username"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleSignUpTextView"
        />

    <EditText
        android:id="@+id/newUserPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newUserNameEditText"
        />
    <TextView
        android:id="@+id/newUserSecurityKeyTextView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/please_enter_a_recovery_word"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newUserPasswordEditText"
        />
    <EditText
        android:id="@+id/newUserSecurityKeyEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:autofillHints="Please enter security key!"
        android:gravity="center"
        android:hint="@string/security_key"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newUserSecurityKeyTextView"
        />
    <Button
        android:id="@+id/newUserSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_margin="16dp"
        android:text="@string/submit"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newUserSecurityKeyEditText"
        />

</androidx.constraintlayout.widget.ConstraintLayout>