<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ForgotPasswordFragment" >

    <TextView
        android:id="@+id/titleForgotPasswordTextView"
        android:layout_width="379dp"
        android:layout_height="157dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/forgot_password_enter_username"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameForgotEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="Please Enter Username!"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/titleForgotPasswordTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/securityKeyEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:autofillHints="Please Enter Security Key!"
        android:gravity="center"
        android:hint="@string/security_key"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameForgotEditText" />

    <Button
        android:id="@+id/forgotPasswordSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_margin="16dp"
        android:text="@string/submit"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/securityKeyEditText" />

    <Button
        android:id="@+id/backToLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordSubmitButton" />
</androidx.constraintlayout.widget.ConstraintLayout>