<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/adminSettingsTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/allowUsersLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/allow_new_user_registration"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/adminSettingsTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/allowUsersSwitch" />

    <Switch
        android:id="@+id/allowUsersSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/allowUsersLabel"
        app:layout_constraintBottom_toBottomOf="@id/allowUsersLabel"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/maintenanceModeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/maintenance_mode"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/allowUsersLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/maintenanceModeSwitch" />

    <Switch
        android:id="@+id/maintenanceModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/maintenanceModeLabel"
        app:layout_constraintBottom_toBottomOf="@id/maintenanceModeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/settingsSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/maintenanceModeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/adminBackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>